tests/grammar/schema/inherit/inherit_mixin_fail/stderr.golden
error[E2D34]: IllegalInheritError
 --> ${CWD}/main.k:8:16
  |
8 | schema Scholar(FullnameMixin):
  |                ^ invalid schema inherit object type, expect schema, got 'FullnameMixin'
  |
error[E2L23]: CompileError
  --> ${CWD}/main.k:12:5
   |
12 |     "firstName": "Jon",
   |     ^ Cannot add member 'firstName' to schema 'Scholar'
   |
error[E2L23]: CompileError
  --> ${CWD}/main.k:13:5
   |
13 |     "lastName": "Doe"
   |     ^ Cannot add member 'lastName' to schema 'Scholar'
   |